# NRD-W300-V1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  NRD-W300-V1.code-workspace  Readme.md  build.ninja  cmake_install.cmake  compile_commands.json
App/: EngSM_IF.c  EngSM_IF.h  EngSM_Main.c  EngSM_Main.h  EngSM_Types.h
App/EngFOC/: EngFOC_IF.c  EngFOC_IF.h  EngFOC_Main.c  EngFOC_Main.h  EngFOC_Types.h
App/EngIFSvc/: EngIFSvc_IF.c  EngIFSvc_IF.h  EngIFSvc_Main.c  EngIFSvc_Main.h  EngIFSvc_Types.h
App/EngTimer/: EngTimerSvc_IF.c  EngTimerSvc_IF.h  EngTimerSvc_Main.c  EngTimerSvc_Main.h  EngTimerSvc_Types.h
App/FOC/: EngFOC_Main.c  EngFOC_Main.h
Docs/: NUCLEO-F446RE+IHM07M1_MorphoPinMap_for_FOC.xlsx  NUCLEO-F446RE_+IHM07M1_MorphoPinMap_for_FOC.xlsx  Noname.json  NonameProtocol.xlsx  Parts.xlsx  SynapseProtocol.xlsx
Drv/: EngDrv_ADC.c  EngDrv_ADC.h  EngDrv_CAN.c  EngDrv_CAN.h  EngDrv_Encoder.c  EngDrv_Encoder.h  EngDrv_Flash.c  EngDrv_IF.c  EngDrv_IF.h  EngDrv_SPI.c  EngDrv_SPI.h  EngDrv_Sensor.c  EngDrv_Sensor.h  EngDrv_UART.c  EngHAL_Interrupt.c  EngHAL_Interrupt.h
HAL/EngChip/: .mxproject  NRD-W300-V1_STM32F446RET6.ioc
HAL/EngChip/Core/Inc/: stm32f4xx_hal_conf.h
HAL/EngChip/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
HAL/EngChip/Drivers/CMSIS/Core/Include/: core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_starmc1.h
HAL/EngChip/Drivers/CMSIS/Core_A/Include/: cmsis_iccarm.h
HAL/EngChip/Drivers/CMSIS/DSP/Source/TransformFunctions/: arm_cfft_f32.c  arm_cfft_q15.c
HAL/EngChip/Drivers/CMSIS/Include/: cmsis_iccarm.h  core_armv81mml.h  core_armv8mml.h  core_cm3.h  core_cm33.h  core_sc300.h
HAL/EngHAL/: EngHAL_ADC_STM32F7xx.c  EngHAL_ETH_STM32F7xx.c  EngHAL_ETH_STM32F7xx.h  EngHAL_Lib.c  EngHAL_Lib.h  EngHAL_Types.h
HAL/EngHAL/STM32F4xx/: EngHAL_ADC_STM32F4xx.c  EngHAL_ADC_STM32F4xx.h  EngHAL_Base_STM32F4xx.c  EngHAL_Base_STM32F4xx.h  EngHAL_CAN_STM32F4xx.c  EngHAL_CAN_STM32F4xx.h  EngHAL_Core_STM32F4xx.c  EngHAL_Core_STM32F4xx.h  EngHAL_GPIO_STM32F4xx.c  EngHAL_GPIO_STM32F4xx.h  EngHAL_I2C_STM32F4xx.c  EngHAL_I2C_STM32F4xx.h  EngHAL_PWM_STM32F4xx.c  EngHAL_PWM_STM32F4xx.h  EngHAL_PWR_STM32F4xx.c  EngHAL_PWR_STM32F4xx.h  EngHAL_RTC_STM32F4xx.c  EngHAL_RTC_STM32F4xx.h  EngHAL_SPI_STM32F4xx.c  EngHAL_SPI_STM32F4xx.h  EngHAL_SRAM_STM32F4xx.c  EngHAL_SRAM_STM32F4xx.h  EngHAL_TIM_STM32F4xx.c  EngHAL_TIM_STM32F4xx.h  EngHAL_UART_STM32F4xx.c  EngHAL_UART_STM32F4xx.h
HAL/EngHAL/STM32F7xx/: EngHAL_ADC_STM32F7xx.c  EngHAL_ETH_STM32F7xx.c
Include/: Eng_CommonType.h  Eng_DeviceType.h  Eng_FeatureType.h  Eng_Macro.h  Eng_StatusType.h
Infra/EngCM/: EngCM_DebugConfig.h  EngCM_DriverConfig.h  EngCM_FeatureConfig.h  EngCM_HalConfig.h  EngCM_IF.c  EngCM_IF.h  EngCM_TimerSvcConfig.h
Infra/EngLib/: EngLib_IF.c  EngLib_IF.h  EngLib_Main.c  EngLib_Types.h  EngLog_IF.c  EngLog_IF.h  EngLog_Lib.c  EngLog_Lib.h  EngLog_Types.h  EngOS_Lib.c  EngOS_Lib.h  EngOS_Types.h
Source/: FOC.c
Source/App/: EngAPP_FOC.c  EngAPP_FOC.h  EngAPP_Types.h  EngSM_HndIF.h  EngSM_IF.h  EngSM_Main.c  EngSM_State.h  EngSM_Types.h
Source/App/EngMH/: EngMH_IF.c  EngMH_IF.h  EngMH_Main.c  EngMH_Main.h  EngMH_Sleeve.c  EngMH_Types.h
Source/App/EngSM/: EngSM_HndIF.c  EngSM_IF.c  EngSM_Main.h  EngSM_State.c
Source/App/FOC/: EngFOC_Main.c  EngFOC_Types.h
Source/Drv/: EngDrv_ADC.c  EngDrv_ADC.h  EngDrv_CAN.c  EngDrv_CAN.h  EngDrv_Encoder.c  EngDrv_Encoder.h  EngDrv_Flash.c  EngDrv_Flash.h  EngDrv_IF.c  EngDrv_IF.h  EngDrv_Motor.c  EngDrv_Motor.h  EngDrv_SPI.h  EngDrv_Sensor.c  EngDrv_UART.c  EngDrv_UART.h
Source/HAL/EngChip/: NRD-W300-V1_STM32F446RET6.ioc
Source/HAL/EngChip/Core/Inc/: stm32f4xx_it.h
Source/HAL/EngChip/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Source/HAL/EngHAL/: EngHAL_ADC_STM32F7xx.h  EngHAL_CAN_STM32F7xx.c  EngHAL_Lib.c  EngHAL_UART_STM32F7xx.c  EngHAL_UART_STM32F7xx.h
Source/Include/: Eng_CommandType.h  Eng_CommonType.h  Eng_DeviceType.h  Eng_Macro.h  Eng_MessageType.h
Source/Infra/EngCM/: EngCM_DriverConfig.h  EngCM_ErrorHndConfig.h  EngCM_SystemConfig.h  EngCM_SystemMgrConfig.h  EngCM_TimerSvcConfig.h
Source/Infra/EngLib/: EngLib_Main.h  EngLib_Types.h  EngLog_IF.c  EngLog_Lib.h  EngLog_Types.h  EngOS_Lib.c  EngOS_Lib.h  EngOS_Types.h
Source/cmake/stm32cubemx/: CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
